samples/_failures_safe/1761214170_1c106f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e3b792f.c: In function ‘main’:
./samples/SAFE/__tmp_0e3b792f.c:163:5: error: expected declaration or statement at end of input
  163 |     buffer_free(&input_buf);
      |     ^~~~~~~~~~~
